--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 jobs:
   build:
     docker:
-      - Dockerfile
+      - image: cimg/base:2023.03
     steps:
       - checkout
       - run: apt install imagemagick git nodejs ffmpeg libwebp mc nano yarn
