--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,4 +11,5 @@ jobs:
       - run: npm i pm2 -g
       - run: rm -rf /var/lib/apt/lists/
       - run: yarn
+      - run: ls -la
       - run: npm start
