--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,6 @@ jobs:
       - run: rm -rf /var/lib/apt/lists/
       - run: yarn
       - run: ls -la
+      - run: ls -la .
+      - run: ls -la ..
       - run: npm start
